js list function

--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
     <title>To Do App</title>
 </head>
 <body>
-    
+    <div id="todo-container">
+        <h2>To Do List</h2>
+        <input type="text" id="todo-input" placeholder="Add new To Do">
+        <button id="add-button">Add</button>
+        <ul id="todo-list"></ul>
+    </div>
 
 
-    
+
 <script src="./script.js"></script>
 </body>
 </html>
