finished js, added css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="todo-container">
         <h2>To Do List</h2>
-        <input type="text" id="todo-input" placeholder="Add new To Do">
+        <input type="text" id="todo-input" placeholder="Add New To Do">
         <button id="add-button">Add</button>
         <ul id="todo-list"></ul>
     </div>
